k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bank
  labels:
    name: bank
