k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: ghcr.io/dafuemu/app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
