k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: bank
  labels:
    app: account
    service: account
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: account
